--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ html, body{
 *{
     margin: 0;
     /* padding: 0; */
+    box-sizing: border-box;
 }
 body{
     font-family: 'Montserrat', sans-serif;
@@ -114,6 +115,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    
 }
 .chal__box{
     width: 460px;
@@ -122,7 +124,8 @@ body{
     margin-bottom: 5%;
 }
 .chal__box img{
-    width: 250px;
+    width: 150px;
+    height: 150px;
     margin-bottom: 5%;
 }
 .button__bonus{
